# archon

./: .gitignore  AGENT_CONTEXT.json  CODEBASE_CONTEXT.json  pyproject.toml
archon/: __init__.py  __main__.py  activity.py  agent.py  cli.py  cli_activity_commands.py  cli_commands.py  cli_history_commands.py  cli_input.py  cli_interactive_commands.py  cli_memory_commands.py  cli_news_commands.py  cli_repl_commands.py  cli_runtime.py  cli_self_commands.py  cli_ui.py  compressor.py  config.py  context_metrics.py  distiller.py  heartbeat.py  history.py  introspect.py  llm.py  memory.py  prompt.py  safety.py  slash_palette.py  streaming.py  system.py  tools.py
prompts/: guidelines.md  system.md
scripts/: deep_research_smoke.py  stream_event_probe.py
services/: __init__.py
tests/: test_activity.py  test_agent.py  test_agent_auto_compact.py  test_agent_history_budget.py  test_agent_loop_detection.py  test_audio_stt.py  test_audio_tts.py  test_calls_service_client.py  test_calls_store.py  test_cli.py  test_cli_activity_commands.py  test_cli_renderer.py  test_compressor.py  test_config.py  test_deep_research_routing.py  test_deep_research_smoke.py  test_distiller.py  test_edit_diff.py  test_execution_suspension.py  test_filesystem_tools_confirm.py  test_heartbeat.py  test_history.py  test_history_shaping.py  test_hooks.py  test_llm.py  test_llm_runtime.py  test_mcp.py  test_memory.py  test_news_pipeline.py  test_news_runner.py  test_news_state.py  test_news_summarize.py  test_permission_modes.py  test_research.py  test_research_store.py  test_safety.py  (+38 more)
(+198 files in other folders)
